@@ -1,5 +1,5 @@
 #
-# $Id: treeview.test,v 1.4 2008/05/23 20:20:07 jenglish Exp $
+# $Id: treeview.test,v 1.5 2008/08/19 14:47:55 jenglish Exp $
 #
 # [7Jun2005] TO CHECK: [$tv see {}] -- shouldn't work (at least, shouldn't do
 # what it currently does)
@@ -471,7 +471,7 @@ test treeview-9.0 "scroll callback - empty tree" -body {
     .tv delete [.tv children {}]
     update
     set ::scrolldata
-} -result [list 0 1]
+} -result [list 0.0 1.0]
 
 ### identify tests:
 #
